# ray_ruster

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
src/geometry/: bounding_box.rs  kdtree.rs  mesh.rs  mod.rs  ray.rs  types.rs
src/render/: config.rs  image.rs  mod.rs  ray_tracer.rs
src/viewer/: glscene.rs  glviewer.rs  mod.rs
tests/: triangle_box_intersection_test.rs
