[package]
name = "ray_ruster"
version = "0.1.0"
authors = ["Lauris Jullien <lauris.jullien@telecom-paristech.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ray_ruster"
path = "src/lib.rs"

[[bin]]
name = "ray_ruster"
path = "src/main.rs"

[dependencies]
image = "0.23"
nalgebra = "0.21"
regex = "1"
tempfile = "3"

[dependencies.gtk]
version = "0.8.1"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
